# WM_UMBRA

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  NOTICE.md  README.md  bump_version.ps1  umbra.sln  vcpkg.json
.github/workflows/: codeql-analysis.yml  run-build.yml
cmake/: umbraConfig.cmake.in
include/: DMSubclass.h  DarkMode.h  IatHook.h  ModuleHelper.h  SysColorHook.h  UAHMenuBar.h  Version.h  WinVerHelper.h  umbra.h
project/: darkmode32plus.Cpp.props  darkmode32plus.vcxproj  darkmode32plus.vcxproj.filters  umbra.Cpp.Default.props  umbra.Cpp.props  umbra.ruleset  umbra.vcxproj  umbra.vcxproj.filters
sample/: main.cpp  resource.h  sample.rc  umbra-sample.vcxproj
sample-hook/: AutoDarkMode.cpp  ProcessColorHook.cpp  ThemeColorHook.cpp  bpanels.cpp  createwlog.cpp  ebrowser.cpp  hook.h  hook.rc  main.cpp  pages.cpp  resource.h  umbra-hook.vcxproj
sample-inject/: DuiPaintHook.cpp  umbra-inject.cpp  umbra-inject.vcxproj  umbra-payload.cpp  umbra-payload.vcxproj  unstick-payload.ps1
src/: DMSubclass.cpp  DarkMessageBox.cpp  DarkMode.cpp  ProcessColorHook.cpp  SysColorHook.cpp  umbra.cpp
vcpkg-overlay/: README.md
vcpkg-overlay/umbra/: portfile.cmake  vcpkg.json
versions/: baseline.json
versions/u-/: umbra.json
